# aiogram-sqlalchemy-template

./: .env.example  README.md  pyproject.toml
alembic/: env.py
src/: __main__.py  settings.py
src/bot/: __init__.py
src/bot/handlers/: __init__.py
src/bot/handlers/channel/: __init__.py
src/bot/handlers/chat/: __init__.py
src/bot/handlers/common/: __init__.py  ping.py
src/bot/handlers/private/: __init__.py
src/bot/middlewares/: __init__.py  database.py
src/database/: __init__.py
src/database/models/: __init__.py  test.py  user.py
src/libs/http/: aiohttp.py
